--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="contact">
       <a href="Tlotlomolefem@gmail.com">Email Me</a>
       <a href="https://github.com/MTMolefe" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/tlotlo-molefe"target="_blank">LinkedIn</a>
+      <a href="https://linkedin.com/in/tlotlo-molefe-b95271293"target="_blank">LinkedIn</a>
     </div>
     <a href="Molefe Tlotlo.pdf" class="resume-btn" download>Download Resume</a>
   </section>
