--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>Projects</h2>
     <div class="project">
       <p class="project-title">Ordering Website</p>
-      <p>Built a responsive Order system website using HTML, CSS, and JavaScript to showcase my work. <a href="index.html"> Project 1 </a></p>
+      <p>Built a responsive Order system website using HTML, CSS, and JavaScript to showcase my work. <a href="Order.html"> Project 1 </a></p>
     </div>
     <div class="project">
       <p class="project-title">Todo App</p>
