--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
   <section>
     <h2>Contact</h2>
     <div class="contact">
-      <a href="https://Tlotlomolefem@gmail.com">Email Me</a>
+      <a href="tlotlomolefem@gmail.com">Email Me</a>
       <a href="https://github.com/MTMolefe" target="_blank">GitHub</a>
       <a href="https://linkedin.com/in/tlotlo-molefe-b95271293"target="_blank">LinkedIn</a>
-      <a href="https://mail.google.com/Tlotlomolefem@gmail.com" target="_blank">Email</a>    
+        
     </div>
     <a href="Molefe Tlotlo.pdf" class="resume-btn" download>Download Resume</a>
   </section>
