--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <section>
     <h2>Contact</h2>
     <div class="contact">
-      <a href="tlotlomolefem@gmail.com">Email Me</a>
+      <a href="mailto: tlotlomolefem@gmail.com">Email Me</a>
       <a href="https://github.com/MTMolefe" target="_blank">GitHub</a>
       <a href="https://linkedin.com/in/tlotlo-molefe-b95271293"target="_blank">LinkedIn</a>
         
