--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
       <a href="mailto: tlotlomolefem@gmail.com">Email Me</a>
       <a href="https://github.com/MTMolefe" target="_blank">GitHub</a>
       <a href="https://linkedin.com/in/tlotlo-molefe-b95271293"target="_blank">LinkedIn</a>
+	 <a href="tel: +27769939594" target="_blank">Call Me</a>    
         
     </div>
     <a href="Molefe Tlotlo.pdf" class="resume-btn" download>Download Resume</a>
