--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <section>
     <h2>About Me</h2>
     <p>Hello! I'm a passionate full stack developer with experience in creating responsive, user-friendly websites and applications. I love solving problems and bringing ideas to life.
-	I am currently 22, i was born in 2002 december 06, I stay in modderfontein Sandton. I have a diploma in Information Technology from Vaal Univeristy of technology, in 2024 I attended a microsoft short programe at Dynamic DNA which I aquired microsoft AZ900, AZ204 and PL300 certificate.In 2025, I am currently enrolled in Vaal Univeristy of Technology doing Advanced diploma in Information Technology and also doing a one year learnership at Dynamic DNA</p>
+	I hope that after going through my resume and letter, you will allow me the opportunity to impress you with not only my personality but my learned skillset as well.  learnership at Dynamic DNA</p>
   </section>
 
   <section>
@@ -126,8 +126,13 @@
   <section>
     <h2>Work Experience</h2>
     <div class="job">
-      <p><strong>Microsoft learnership </strong> at Dynamic DNA (August 2024 - present)</p>
-      <p>Achieved microsoft Cerificates, learned about the work environment. We developed application using github</p>
+      <p><strong>Microsoft learnership </strong> at Dynamic DNA (August 2024 - November 2024)</p>
+      <p>Achieved microsoft Cerificates,I aquired Microsoft Azure Fundamental(AZ900), Developing Solutions for Microsoft Azure (AZ204) and Microsoft Power BI Data Analyst (PL300) certificate</p>
+    </div>
+
+	  <div class="job2">
+      <p><strong>System Development learnership </strong> at Dynamic DNA (March 2025 - present)</p>
+      <p>MS900, AI900, MS721, AI102</p>
     </div>
   </section>
   
