--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Hello! I'm a passionate full stack developer with experience in creating responsive, user-friendly websites and applications. I love solving problems and bringing ideas to life.
-	I hope that after going through my resume and letter, you will allow me the opportunity to impress you with not only my personality but my learned skillset as well.  learnership at Dynamic DNA</p>
+    <p>An enthusiastic and industrious individual who has an excellent sense of responsibility and who ensures that all tasks completed are of exceptional high standard, is who I am. I pride myself on having integrity as I always perform my work with honesty and diligence. I'm a passionate full stack developer with experience in creating responsive, user-friendly websites and applications. I love solving problems and bringing ideas to life.
+	I hope that after going through my resume and letter, you will allow me the opportunity to impress you with not only my personality but my learned skillset as well.</p>
   </section>
 
   <section>
@@ -111,6 +111,7 @@
       <span>React</span>
       <span>Node.js</span>
       <span>Git</span>
+      <span>C++</span>
     </div>
   </section>
 
