--- a/Order.html
+++ b/Order.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 	<style>
     body {
-      background-image: url('C:/Users/Tlotlo/OneDrive/Desktop/my work application files/my github project/mtm.jpg'); 
+      background-image: url('https://static.vecteezy.com/system/resources/previews/009/122/076/original/mtm-logo-mtm-letter-mtm-letter-logo-design-initials-mtm-logo-linked-with-circle-and-uppercase-monogram-logo-mtm-typography-for-technology-business-and-real-estate-brand-vector.jpg'); 
       background-repeat: no-repeat; 
       background-position: center; 
       background-size: cover; 
