--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       <span>Node.js</span>
       <span>Git</span>
       <span>C++</span>
+      <span>Cloud Computing</span>
+      <span>Cybersecurity</span>    
+      <span>Database Management (SQL, MongoDB)</span>
     </div>
   </section>
 
