--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <p><strong>Microsoft learnership </strong> at Dynamic DNA (August 2024 - November 2024)</p>
       <p>Achieved microsoft Cerificates,I aquired Microsoft Azure Fundamental(AZ900), Developing Solutions for Microsoft Azure (AZ204) and Microsoft Power BI Data Analyst (PL300) certificate</p>
     </div>
-
+	
 	  <div class="job2">
       <p><strong>System Development learnership </strong> at Dynamic DNA (March 2025 - present)</p>
       <p>MS900, AI900, MS721, AI102</p>
@@ -148,13 +148,15 @@
 	  </div>
 	  <div class = "diploma">
 	  <p><strong>Diploma in Information Technology</strong> at Vaal University of Technology(January 2021 - December 2023)</p>
-	  <p> Graduated with 71 GPA </p>
-    </div>
+	  <p> Graduated with 71 GPA, AMAZON WEB SERVICES TRAINING AND CERTIFICATION, AWS Educate: Introduction to Cloud 101, AWS Educate: Getting Started with Compute, AWS Educate: Getting started with Serverless 
+		  AWS Educate: Machine Learning (DeepRacer), AWS Educate: Machine learning Foundations, AWS Educate: Web Builder, AWS Educate: Getting started with security </p>
+       </div>
 	<div class = "Advanced">
 	<p><strong>Advanced Diploma in Information Technology</strong> at Vaal University of Technology (January 2025 - Present)</p>
 	</div>
     
   </section>
+
 
   <section>
     <h2>Contact</h2>
