--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	
 	  <div class="job2">
       <p><strong>System Development learnership </strong> at Dynamic DNA (March 2025 - present)</p>
-      <p>MS900, AI900, MS721, AI102</p>
+      <p>Microsoft 365 Fundamentals(MS900), Microsoft Azure AI Fundamentals(AI900), Microsoft 365 Collaboration Communications Systems Engineer Associate (MS721), Microsoft Azure AI Engineer Associate (AI102)</p>
     </div>
   </section>
   
