--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	 <a href="tel: +27769939594" target="_blank">Call Me</a>    
         
     </div>
-    <a href="Molefe Tlotlo.pdf" class="resume-btn" download>Download Resume</a>
+    <a href="Molefe Tlotlo.pdf" class="resume-btn" download>Download CV</a>
   </section>
 
   <footer>
